force-app/main/default/objects/TripMaker__c/TripMaker__c.object-meta.xml
<CustomObject>
    <label>TripMaker</label>
    <nameField>
        <label>TripMaker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TripMakers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>