force-app/main/default/objects/TripMaker__c/fields/ArrivalAirportID__c.field-meta.xml
<CustomField>
    <fullName>ArrivalAirportID__c</fullName>
    <label>ArrivalAirportID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>