force-app/main/default/objects/TripMaker__c/fields/ArriveFrom__c.field-meta.xml
<CustomField>
    <fullName>ArriveFrom__c</fullName>
    <label>ArriveFrom</label>
    <type>Date</type>
</CustomField>