force-app/main/default/objects/TripMaker__c/fields/ArriveTo__c.field-meta.xml
<CustomField>
    <fullName>ArriveTo__c</fullName>
    <label>ArriveTo</label>
    <type>Date</type>
</CustomField>