force-app/main/default/objects/TripMaker__c/fields/DepartFrom__c.field-meta.xml
<CustomField>
    <fullName>DepartFrom__c</fullName>
    <label>DepartFrom</label>
    <type>Date</type>
</CustomField>