force-app/main/default/objects/TripMaker__c/fields/DepartTo__c.field-meta.xml
<CustomField>
    <fullName>DepartTo__c</fullName>
    <label>DepartTo</label>
    <type>Date</type>
</CustomField>