force-app/main/default/objects/TripMaker__c/fields/DepartureAirportID__c.field-meta.xml
<CustomField>
    <fullName>DepartureAirportID__c</fullName>
    <label>DepartureAirportID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>