force-app/main/default/objects/TripMaker__c/fields/PriceList__c.field-meta.xml
<CustomField>
    <fullName>PriceList__c</fullName>
    <label>PriceList</label>
    <type>TextArea</type>
</CustomField>